cabal-version:      >=1.10
name:               ghc-typelits-smtsolver
version:            0.1.0.3

license:            MIT
license-file:       LICENSE

author:             Aleksandr Pokatilov
maintainer:         pokatilov0802@gmail.com

category:           Type System
build-type:         Simple

library
    exposed-modules:          GHC.TypeLits.SMTSolver
    other-extensions:         TupleSections,
                              ViewPatterns

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.18.0.0 && <5,
                      containers >= 0.6.7,
                      extra >= 1.7,
                      ghc >= 9.6.2,
                      ghc-tcplugins-extra >= 0.4.4,
                      simple-smt >= 0.9,
                      transformers >= 0.6.1.0

    -- Directories containing source files.и
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite unit-tests
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    other-modules:    ErrorTests
    hs-source-dirs:   tests
    build-depends:    base >=4.18.0.0,
                      ghc-typelits-smtsolver,
                      tasty >= 0.10,
                      tasty-hunit >= 0.9,
                      template-haskell >= 2.11.0.0
    if impl(ghc >= 9.4)
       build-depends: ghc-prim >= 0.9
    default-language: Haskell2010
    other-extensions: DataKinds
                      GADTs
                      KindSignatures
                      NoImplicitPrelude
                      TemplateHaskell
                      TypeFamilies
                      TypeOperators
                      ScopedTypeVariables
                          
    
                     
    
